# ffi-utils

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  libndt-java.i
include/measurement_kit/: nettest.hpp
include/measurement_kit/ffi/: README.md  engine.hpp  ffi.h  nettest.hpp  task.hpp
include/measurement_kit/nettest/: README.md  nettest.hpp
measurement_kit/: cxx11.hpp  nettest.hpp
measurement_kit/ffi/: README.md
measurement_kit/nettest/: nettest.hpp
nettest/: cxx.py  java.py  nettest.py
script/: cutter  gen  run-tests
spec/: nettest.py
src/main/cpp/: libndt-java_wrap.cxx  libndt-java_wrap.h
src/main/cpp/libffimock/: ffi.cpp
src/main/cpp/libmeasurementkit-jni/: bindings.swigcxx  bindings_wrap.cxx  bindings_wrap.h
src/main/cpp/mock/: main.cpp
src/main/java/io/ooni/mk/nettest/: Runner.java  RunnerWrapper.java
src/main/java/io/ooni/mk/nettest/event/: FailureAsnLookup.java  FailureAsnLookupEvent.java  FailureCcLookup.java  FailureCcLookupEvent.java  FailureIpLookup.java  FailureIpLookupEvent.java  FailureMeasurement.java  FailureMeasurementEvent.java  FailureMeasurementSubmission.java  FailureMeasurementSubmissionEvent.java  FailureReportClose.java  FailureReportCloseEvent.java  FailureReportCreate.java  FailureReportCreateEvent.java  FailureResolverLookup.java  FailureResolverLookupEvent.java  FailureStartup.java  FailureStartupEvent.java  Log.java  LogEvent.java  Measurement.java  MeasurementEvent.java  StatusEnd.java  StatusEndEvent.java  StatusGeoipLookup.java  StatusGeoipLookupEvent.java  (+24 more)
src/main/java/org/openobservatory/measurement_kit/nettest/: FailureASNLookupEvent.java  Nettest.java  NettestWrapper.java  Options.java  Settings.java  StatusUpdatePerformanceEvent.java
src/main/spec/: nettest.py
src/main/template/ffi/: README.md.j2  nettest.hpp.j2
src/main/template/nettest/: nettest.hpp.j2  nettest.java.j2
src/test/cpp/mock/: main.cpp
src/test/cpp/mock-ffi/: main.cpp
src/test/java/: Integration.java
template/: cxx11.hpp.j2  ffi_engine.cpp  nettest.hpp.j2
template/ffi/: README.md.j2
template/nettest/: nettest.hpp.j2
(+83 files in other folders)
